create simple card component

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,3 @@
 @import "./assets/styles/base.scss";
 @import "./assets/styles/components/button.scss";
+@import "./assets/styles/components/card.scss";
